[package]
name = "dada"
version = "0.1.0"
authors = ["HG King <hgmaxwellking@gmail.com>"]
description = "Dadaist Poem Generator"
license = "MIT/Apache-2.0"
repository = "https://github.com/HGHimself/dada"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
regex = "1.5.4"
