[package]
name = "dada-poem-generator"
version = "0.1.7"
authors = ["HG King <hgmaxwellking@gmail.com>"]
description = "Dadaist Poem Generator"
license = "MIT/Apache-2.0"
repository = "https://github.com/HGHimself/dada"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
getrandom = { version="0.1.14", features = ["wasm-bindgen"]}
regex = "1.5.4"
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
